--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,7 +38,7 @@ const t = useTranslations(lang);
           priority={true}
           width={300}
           height={300}
-          sizes="(max-width: 480px) 180px, (max-width: 768px) 240px, 400px"
+          sizes="(max-width: 480px) 180px, (max-width: 768px) 240px, (max-width: 1200px) 300px, 600px"
         />
       </div>
       <div class="floating-elements">
